--- a/event.html
+++ b/event.html
@@ -167,34 +167,34 @@
             <ul>
               <li>
                 <h5>Topics:</h5>
-                <p>Web design & development, Graphics design</p>
+                <p>Obudhingiya bwa Bwamba Campaign</p>
               </li>
               <li>
                 <h5>Host:</h5>
-                <p>Mindset Initiative Africa Organisation</p>
+                <p>OBUDHINGIYA BWA BWAMBA KINGDOM</p>
               </li>
               <li>
                 <h5>Location:</h5>
-                <p>Location</p>
+                <p>Bundibugyo</p>
               </li>
               <li>
                 <h5>Start Date:</h5>
-                <p>January 26, 2021</p>
+                <p>October 23, 2020</p>
               </li>
               <li>
                 <h5>End Date:</h5>
-                <p>February 10, 2021</p>
+                <p>October 26, 2020</p>
               </li>
               <li>
                 <h5>Website:</h5>
-                <p>kodesolution.com</p>
+                <p>http://www.mindsetinitiativeafrica.org/</p>
               </li>
               <li>
                 <h5>Share:</h5>
                 <div class="styled-icons icon-sm icon-gray icon-circled">
-                  <a href="#"><i class="fa fa-facebook"></i></a>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-instagram"></i></a>
+                  <a href="https://www.facebook.com/mindsetinitiativeafric"><i class="fa fa-facebook"></i></a>
+                  <a href="https://www.linkedin.com/company/mindsetinitiativeafrica"><i class="fa fa-linkedin"></i></a>
+                  <a href="https://www.instagram.com/mindsetinitiativeafrica/"><i class="fa fa-instagram"></i></a>
                 </div>
               </li>
             </ul>
@@ -206,25 +206,42 @@
         <div class="row mt-60">
           <div class="col-md-6">
             <h4 class="mt-0">Event Description</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi id perspiciatis facilis nulla possimus quasi, amet qui. Ea rerum officia, aspernatur nulla neque nesciunt alias repudiandae doloremque, dolor, quam nostrum laudantium earum illum odio quasi excepturi mollitia corporis quas ipsa modi nihil, ad ex tempore.</p>
+            <p>The campaign was conducted from 23rd -26th October 2020 in Bwamba county Bundibugyo district. The targeted groups were cultural leaders, wealth creating communities, resources, talents encompassed within, boarder community on the
+Zaire and Uganda.etc.
+It was on Friday 23 when we visited the Obundhigiya Bwa Bwamba offices and
+met cultural leaders among these were the second prime minister Mr. Sunday
+Robert Ssebhanga, minister for education 0weghuko Baguma Athony, Rev
+Irunga Wilber we were later joined by the prime minister Mr. Mubulya Wilson
+who was from kusei meeting at the kings palace these helped us to understand
+the culture of OBUDHINGIYA BWA BWAMBA and how it can foster development
+in communities. </p>
           </div>
           <div class="col-md-6">
             <blockquote>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-              <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+              <p>We should promote civic education beginning from the chiefs and clan leaders to establish a mechanism to enable continuity in the education system of cultures.</p>
+              <footer>Mr. Fulgensio <cite title="Source Title">Esimundhingiya</cite></footer>
             </blockquote>
           </div>
         </div>
         <div class="row mt-60">
           <div class="col-md-12">
             <h4 class="mb-20">Keynote Speakers</h4>
-          </div>          
+          </div> 
+          <div class="col-xs-6 col-sm-4 col-md-2 mb-sm-30">
+            <div class="attorney">
+              <div class="thumb"><img src="images/team/sq5.jpg" alt=""></div>
+              <div class="content text-center">
+                <h5 class="author mb-0"><a class="text-theme-colored" href="#">Mr. Mubulya Wilson</a></h5>
+                <h6 class="title text-gray font-12 mt-0 mb-0">Prime Minister</h6>
+              </div>
+            </div>
+          </div>
           <div class="col-xs-6 col-sm-4 col-md-2 mb-sm-30">
             <div class="attorney">
               <div class="thumb"><img src="images/team/sq1.jpg" alt=""></div>
               <div class="content text-center">
-                <h5 class="author mb-0"><a class="text-theme-colored" href="#">Alex Jacobson</a></h5>
-                <h6 class="title text-gray font-12 mt-0 mb-0">Lawyer</h6>
+                <h5 class="author mb-0"><a class="text-theme-colored" href="#">Mr. Sunday Robert Ssebhanga</a></h5>
+                <h6 class="title text-gray font-12 mt-0 mb-0">Second Prime Minister</h6>
               </div>
             </div>
           </div>
@@ -232,8 +249,8 @@
             <div class="attorney">
               <div class="thumb"><img src="images/team/sq2.jpg" alt=""></div>
               <div class="content text-center">
-                <h5 class="author mb-0"><a class="text-theme-colored" href="#">Alex Jacobson</a></h5>
-                <h6 class="title text-gray font-12 mt-0 mb-0">Businessman</h6>
+                <h5 class="author mb-0"><a class="text-theme-colored" href="#">Mr. Fulgensio</a></h5>
+                <h6 class="title text-gray font-12 mt-0 mb-0">Esimudhingiya</h6>
               </div>
             </div>
           </div>
@@ -241,8 +258,8 @@
             <div class="attorney">
               <div class="thumb"><img src="images/team/sq3.jpg" alt=""></div>
               <div class="content text-center">
-                <h5 class="author mb-0"><a class="text-theme-colored" href="#">Alex Jacobson</a></h5>
-                <h6 class="title text-gray font-12 mt-0 mb-0">Student</h6>
+                <h5 class="author mb-0"><a class="text-theme-colored" href="#">Mr. Wilfred Aliganyira</a></h5>
+                <h6 class="title text-gray font-12 mt-0 mb-0">Manager-Esco Company</h6>
               </div>
             </div>
           </div>
@@ -250,17 +267,8 @@
             <div class="attorney">
               <div class="thumb"><img src="images/team/sq4.jpg" alt=""></div>
               <div class="content text-center">
-                <h5 class="author mb-0"><a class="text-theme-colored" href="#">Alex Jacobson</a></h5>
-                <h6 class="title text-gray font-12 mt-0 mb-0">Lawyer</h6>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-6 col-sm-4 col-md-2 mb-sm-30">
-            <div class="attorney">
-              <div class="thumb"><img src="images/team/sq5.jpg" alt=""></div>
-              <div class="content text-center">
-                <h5 class="author mb-0"><a class="text-theme-colored" href="#">Alex Jacobson</a></h5>
-                <h6 class="title text-gray font-12 mt-0 mb-0">Businessman</h6>
+                <h5 class="author mb-0"><a class="text-theme-colored" href="#">0weghuko Baguma Athony</a></h5>
+                <h6 class="title text-gray font-12 mt-0 mb-0">Minister for Education</h6>
               </div>
             </div>
           </div>
@@ -268,8 +276,8 @@
             <div class="attorney">
               <div class="thumb"><img src="images/team/sq6.jpg" alt=""></div>
               <div class="content text-center">
-                <h5 class="author mb-0"><a class="text-theme-colored" href="#">Alex Jacobson</a></h5>
-                <h6 class="title text-gray font-12 mt-0 mb-0">Student</h6>
+                <h5 class="author mb-0"><a class="text-theme-colored" href="#">Rev Irunga Wilber</a></h5>
+                <h6 class="title text-gray font-12 mt-0 mb-0">Priest</h6>
               </div>
             </div>
           </div>
@@ -283,7 +291,7 @@
         <div class="section-title mb-30">
           <div class="row">
             <div class="col-md-6 col-md-offset-3 text-center">
-              <h3 class="title text-theme-colored">Registration Form</h3>
+              <h3 class="title text-theme-colored"> Join Us for Our Next Event</h3>
             </div>
           </div>
         </div>
@@ -370,10 +378,10 @@
             <p class="font-12 mt-10 mb-10">Mindset initiative is to have a common positive ideology as Africans towards Africa to the solutions of saving our generational minds and create a renewed Africa.</p>
             <!-- <a class="btn btn-default btn-transparent btn-xs btn-flat mt-5" href="#">Read more</a> -->
             <ul class="styled-icons icon-sm icon-bordered icon-circled clearfix mt-20">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://www.facebook.com/mindsetinitiativeafric"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-              <li><a href="#"><i class="fa fa-fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.instagram.com/mindsetinitiativeafrica"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.linkedin.com/company/mindsetinitiativeafrica"><i class="fa fa-fa fa-linkedin"></i></a></li>
               <!-- <li><a href="#"><i class="fa fa-behance"></i></a></li> -->
             </ul>
           </div>
@@ -449,7 +457,7 @@
     <div class="container-fluid bg-theme-colored p-20">
       <div class="row text-center">
         <div class="col-md-12">
-          <p class="text-white font-11 m-0">Copyright &copy;2020 Mindset Initiative Africa. All Rights Reserved</p>
+          <p class="text-white font-11 m-0">Copyright &copy;2021 Mindset Initiative Africa. All Rights Reserved</p>
         </div>
       </div>
     </div>
