--- a/about.html
+++ b/about.html
@@ -75,10 +75,10 @@
           <div class="col-md-3">
             <div class="widget no-border m-0">
               <ul class="styled-icons icon-sm sm-text-center">
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://www.facebook.com/mindsetinitiativeafric"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                <li><a href="https://www.instagram.com/mindsetinitiativeafrica/"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://www.linkedin.com/company/mindsetinitiativeafrica"><i class="fa fa-linkedin"></i></a></li>
               </ul>
             </div>
           </div>
@@ -312,7 +312,7 @@
                 <div class="volunteer border bg-white-fa maxwidth400 p-30">
                   <div class="thumb"><img alt="" src="images/0/members/melody.png" class="img-fullwidth img-circle" style="height: 200px !important; width:200px; object-fit: cover;"></div>
                   <div class="info">
-                    <h4 class="name"><a href="#">KAYODI MELODY MERCY</a></h4>
+                    <h4 class="name"><a href="#">MERCY MELODY KAYODI</a></h4>
                     <h6 class="occupation">HEAD STRATEGIC PLANNING</h6>
                     <p>The communication gap between the elderly and the younger people today has cost development so much in the face of the rapid changing world. In as much as some old African practices were dehumanizing, we must agree that there’s a lot of practices that are still very important and much needed if development is to happen Thou we don’t seem to have concrete information if we come together and share what is common, harmonize it with the current development needs then the question of LIFESTYLE DISEASES, poverty, CLIMATE DESTRUCTION will all be history, this alone drives me to be the initiator of a new Africa.</p>
                     <hr>
@@ -330,7 +330,15 @@
                   <div class="info">
                     <h4 class="name"><a href="#">MAISO CHRISTOPHER</a></h4>
                     <h6 class="occupation">Public Relations</h6>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate quasi praesentium corporis possimus quibusdam nemo placeat qui fugiat</p>
+                    <p>Mindset initiative is a great opportunity for Africa to explore its potential. I believe we have so much to offer and it
+                    is initiatives like these that will drive Africa to greatness.
+                    
+                    I am proud to be apart of this organization because it gives me confidence and hope that Africa is on the path to take
+                    its rightful position in the world.
+                    
+                    Each and everyone of us has a part to play in magnifying the glory of Africa. Let us embrace our identity and put it to
+                    proper use. Like Nelson Mandela said when people are determined they can overcome anything. That is the spirit of Africa
+                    mindset initiative and that’s the future of a sustainable better africa for us all.</p>
                     <hr>
                     <ul class="styled-icons icon-sm icon-dark icon-theme-colored mt-10 mb-0">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -382,8 +390,8 @@
                     <hr>
                     <ul class="styled-icons icon-sm icon-dark icon-theme-colored mt-10 mb-0">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                      <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
