--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
             <h4 class="text-uppercase line-bottom mt-0">Become a Volunteer</h4>
             <div class="volunteer-wrapper border-bottom sm-maxwidth500 clearfix pb-15 mb-sm-30">
               <div class="fluid-video-wrapper">
-                <iframe src="//player.vimeo.com/video/22029657?title=0&amp;byline=0&amp;portrait=0" height="210"  title="Volunteer policy" allowfullscreen aria-placeholder="images/blur_bg.jpg"></iframe>
+                <iframe src="https://vimeo.com/239785775" height="210"  title="Volunteer policy" allowfullscreen aria-placeholder="images/blur_bg.jpg"></iframe>
               </div>
               <p class="mb-10 mt-15">Become part of the revolution to change the mindset of Africans and foster growth in the economy by supporting our initiative. We are a youth driven organisation with the drive towards a better African Future economically, mentally and spiritually</p>
               <p>
@@ -867,12 +867,12 @@
                 <!-- Portfolio Item Start -->
                 <div class="gallery-item">
                   <div class="thumb">
-                    <img alt="project" src="images/0/mental social support/IMG_20200709_103201.jpg" class="img-fullwidth">
+                    <img alt="project" src="images\0\Bundibugyo\IMG_8302.JPG" class="img-fullwidth">
                     <div class="overlay-shade"></div>
                     <div class="icons-holder">
                       <div class="icons-holder-inner">
                         <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                          <a href="images/0/mental social support/IMG_20200709_103201.jpg"  data-lightbox-gallery="gallery"><i class="fa fa-picture-o"></i></a>
+                          <a href="images\0\Bundibugyo\IMG_8302.JPG"  data-lightbox-gallery="gallery"><i class="fa fa-picture-o"></i></a>
                         </div>
                       </div>
                     </div>
@@ -883,12 +883,12 @@
                 <!-- Portfolio Item Start -->
                 <div class="gallery-item">
                   <div class="thumb">
-                    <img alt="project" src="images/0/mental social support/IMG_20200709_102447.jpg" class="img-fullwidth">
+                    <img alt="project" src="images\0\Bundibugyo\IMG_8324.JPG" class="img-fullwidth">
                     <div class="overlay-shade"></div>
                     <div class="icons-holder">
                       <div class="icons-holder-inner">
                         <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                          <a href="images/0/mental social support/IMG_20200709_102447.jpg"  data-lightbox-gallery="gallery"><i class="fa fa-picture-o"></i></a>
+                          <a href="images\0\Bundibugyo\IMG_8324.JPG"  data-lightbox-gallery="gallery"><i class="fa fa-picture-o"></i></a>
                         </div>
                       </div>
                     </div>
@@ -899,12 +899,12 @@
                 <!-- Portfolio Item Start -->
                 <div class="gallery-item">
                   <div class="thumb">
-                    <img alt="project" src="images/0/mental social support/IMG_20200709_103332.jpg" class="img-fullwidth">
+                    <img alt="project" src="images\0\Bundibugyo\IMG_8349.JPG" class="img-fullwidth">
                     <div class="overlay-shade"></div>
                     <div class="icons-holder">
                       <div class="icons-holder-inner">
                         <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                          <a href="images/0/mental social support/IMG_20200709_103332.jpg"  data-lightbox-gallery="gallery"><i class="fa fa-picture-o"></i></a>
+                          <a href="images\0\Bundibugyo\IMG_8349.JPG"  data-lightbox-gallery="gallery"><i class="fa fa-picture-o"></i></a>
                         </div>
                       </div>
                     </div>
@@ -915,12 +915,12 @@
                 <!-- Portfolio Item Start -->
                 <div class="gallery-item">
                   <div class="thumb">
-                    <img alt="project" src="images/0/mental social support/IMG_20200720_130544.jpg" class="img-fullwidth">
+                    <img alt="project" src="images\0\Bundibugyo\IMG_8358.JPG" class="img-fullwidth">
                     <div class="overlay-shade"></div>
                     <div class="icons-holder">
                       <div class="icons-holder-inner">
                         <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                          <a href="images/0/mental social support/IMG_20200720_130544.jpg"  data-lightbox-gallery="gallery"><i class="fa fa-picture-o"></i></a>
+                          <a href="images\0\Bundibugyo\IMG_8358.JPG"  data-lightbox-gallery="gallery"><i class="fa fa-picture-o"></i></a>
                         </div>
                       </div>
                     </div>
