--- a/event.html
+++ b/event.html
@@ -142,7 +142,7 @@
  
   <div class="main-content">
     <!-- Section: inner-header -->
-    <section class="inner-header divider layer-overlay overlay-dark" data-bg-img="http://placehold.it/1920x1280">
+    <section class="inner-header divider layer-overlay overlay-dark" data-bg-img="images\0\Bundibugyo\DJI_0900.JPG">
       <div class="container pt-30 pb-30">
         <!-- Section Content -->
         <div class="section-content text-center">
@@ -200,7 +200,7 @@
             </ul>
           </div>
           <div class="col-md-8">
-            <img src="https://placehold.it/755x480" alt="">
+            <img src="images\0\Bundibugyo\IMG_8302.JPG" alt="">
           </div>
         </div>
         <div class="row mt-60">
@@ -286,7 +286,7 @@ in communities. </p>
     </section>
 
     <!-- Section: Registration Form -->
-    <section class="divider parallax layer-overlay overlay-light" data-stellar-background-ratio="0.5" data-bg-img="http://placehold.it/1920x1280">
+    <section class="divider parallax layer-overlay overlay-light" data-stellar-background-ratio="0.5" data-bg-img="images\0\Bundibugyo\DJI_0903.JPG">
       <div class="container-fluid">
         <div class="section-title mb-30">
           <div class="row">
@@ -354,12 +354,12 @@ in communities. </p>
           <div class="col-md-12">
             <h4 class="mb-20">Event Gallery</h4>
             <div class="recent-project">
-              <div class="item"><img src="https://placehold.it/285x215" alt=""></div>
-              <div class="item"><img src="https://placehold.it/285x215" alt=""></div>
-              <div class="item"><img src="https://placehold.it/285x215" alt=""></div>
-              <div class="item"><img src="https://placehold.it/285x215" alt=""></div>
-              <div class="item"><img src="https://placehold.it/285x215" alt=""></div>
-              <div class="item"><img src="https://placehold.it/285x215" alt=""></div>
+              <div class="item"><img src="images\0\Bundibugyo\IMG_8302.JPG" alt=""></div>
+              <div class="item"><img src="images\0\Bundibugyo\IMG_8291.JPG" alt=""></div>
+              <div class="item"><img src="images\0\Bundibugyo\IMG_8324.JPG" alt=""></div>
+              <div class="item"><img src="images\0\Bundibugyo\IMG_8433.JPG" alt=""></div>
+              <div class="item"><img src="images\0\Bundibugyo\IMG_8358.JPG" alt=""></div>
+              <div class="item"><img src="images\0\Bundibugyo\IMG_8379.JPG" alt=""></div>
             </div>
           </div>
         </div>
