--- a/events.html
+++ b/events.html
@@ -208,26 +208,29 @@
               <div class="row equal-height">
                 <div class="col-sm-4 pr-0 pr-sm-15">
                   <div class="thumb p-15">
-                    <img class="img-fullwidth" src="images/blur_bg.jpg" alt="...">
+                    <img class="img-fullwidth" src="images\0\Bundibugyo\IMG_8302.JPG" alt="...">
                   </div>
                 </div>
                 <div class="col-sm-4 border-right pl-0 pl-sm-15">
                   <div class="event-details p-15 mt-20">
-                    <h4 class="media-heading text-uppercase font-weight-500">feed a hungry child</h4>
-                    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante Nulla vel metus scelerisque ante.</p>
+                    <h4 class="media-heading text-uppercase font-weight-500">OBUDHINGIYA BWA BWAMBA</h4>
+                    <p>Obudhingiya bwa Bwamba kingdom is a cultural institution that is legally
+                    derived from the mandate of the people in accordance with article 24b of the
+                    constitution of the 1995 constitution of the republic of Uganda.
+</p>
                     <a href="event.html" class="btn btn-flat btn-dark btn-theme-colored btn-sm mt-10">Details <i class="fa fa-angle-double-right"></i></a>
                   </div>
                 </div>
                 <div class="col-sm-4">
                   <div class="event-count p-15 mt-15">
                     <ul class="event-date list-inline font-16 text-uppercase mt-10 mb-20">
-                      <li class="p-15 mr-5 bg-lightest">Dec</li>
-                      <li class="p-15 pl-20 pr-20 mr-5 bg-lightest"> 31</li>
+                      <li class="p-15 mr-5 bg-lightest">Oct</li>
+                      <li class="p-15 pl-20 pr-20 mr-5 bg-lightest"> 23</li>
                       <li class="p-15 bg-lightest">2020</li>
                     </ul>
                     <ul>
-                      <li class="mb-10 text-theme-colored"><i class="fa fa-clock-o mr-5"></i> at 5.00 pm - 7.30 pm</li>
-                      <li class="text-theme-colored"><i class="fa fa-map-marker mr-5"></i> 25 Gulu.</li>
+                      <li class="mb-10 text-theme-colored"><i class="fa fa-clock-o mr-5"></i> at 8.00 am - 6.30 pm</li>
+                      <li class="text-theme-colored"><i class="fa fa-map-marker mr-5"></i> Bundibugyo.</li>
                     </ul>
                   </div>
                 </div>
@@ -281,10 +284,10 @@
             <p class="font-12 mt-10 mb-10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quam iste explicabo cupiditate sapiente, delectus at? Aliquam inventore, vero eos animi quae corporis soluta incidunt. Fugit quia laboriosam provident tenetur.</p>
             <a class="btn btn-default btn-transparent btn-xs btn-flat mt-5" href="#">Read more</a>
             <ul class="styled-icons icon-sm icon-bordered icon-circled clearfix mt-20">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://www.facebook.com/mindsetinitiativeafric"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-              <li><a href="#"><i class="fa fa-fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.instagram.com/mindsetinitiativeafrica/"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.linkedin.com/company/mindsetinitiativeafrica"><i class="fa fa-fa fa-linkedin"></i></a></li>
               <!-- <li><a href="#"><i class="fa fa-behance"></i></a></li> -->
             </ul>
           </div>
@@ -360,7 +363,7 @@
     <div class="container-fluid bg-theme-colored p-20">
       <div class="row text-center">
         <div class="col-md-12">
-          <p class="text-white font-11 m-0">Copyright &copy;2020 Mindset Initiative Africa. All Rights Reserved</p>
+          <p class="text-white font-11 m-0">Copyright &copy;2021 Mindset Initiative Africa. All Rights Reserved</p>
         </div>
       </div>
     </div>
