--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                   data-splitin="none" 
                   data-splitout="none" 
                   data-responsive_offset="on"
-                  style="z-index: 5; white-space: nowrap; letter-spacing:0px; font-weight:400;">Join our struggle to bring health, social and mental outreach <br> to thousands of people in Uganda.
+                  style="z-index: 5; white-space: nowrap; letter-spacing:0px; font-weight:400;">Join our struggle to bring health, social and mental outreach <br> to thousands of people in Uganda..
                 </div>
 
                 <!-- LAYER NR. 4 -->
